tests/new_merge_fixes/main.js
// @flow

import type { T as T1 } from './spread';
const o1: T1 = {}; // error
